--- a/resources/css/components/_navigation.css
+++ b/resources/css/components/_navigation.css
@@ -45,7 +45,7 @@
 .nav-link:focus {
     background: var(--nav-background-focus-mobile);
     box-shadow: inset 0 0 0 3px var(--nav-indicator-mobile);
-    outline: none;
+    outline: 1px solid transparent;
 }
 
 .nav-link:active {
@@ -148,9 +148,7 @@ button.nav-button .indicator {
         display: block;
         left: 0;
         position: absolute;
-        top: calc(
-            var(--size-9) + var(--size-10) + var(--size-5) + var(--size-3)
-        );
+        top: calc(var(--size-9) + var(--size-10) + var(--size-5) + var(--size-3));
         width: 100vw;
         z-index: 1;
     }
@@ -216,7 +214,7 @@ button.nav-button .indicator {
         background: var(--nav-parent-background-focus);
         box-shadow: inset 0 0 0 3px var(--nav-indicator);
         color: var(--nav-indicator);
-        outline: none;
+        outline: 1px solid transparent;
     }
 
     .nav-link:active,
